<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find My Phone</string>
    <string name="yourPhoneNumber">Your Phone Number</string>
    <string name="Faildmsg">You have to add people who could find you.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map View</string>

    <string name="title_activity_map_display">Map</string>
    <string name="title_activity_street_view">Street View</string>
    <string name="title_activity_find_myphone">Select the phone</string>

    <string name="title_activity_registeration">Click to Invite</string>
    <string name="title_activity_contact_list">Contact List</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_phone_verify">Notes</string>
    <string name="new_message_notification_title_template"> New message: %1$s</string>

    <string name="title_activity_my_street">
        My Street </string>
    <string name="sharemessage">
        I would like to share Awesome app that helps to find your phone location
    </string>
    <string name="GpsDistable">
        You need to give number of permissions
    to this app to find your  phone locations when you miss it,
        please select remember always
    </string>
    <string name="RequestPermision">
        This app need to access to your location and SMS to enable you to find your phone without internet
    </string>

    <string name="AppWork">
     How This App Work?
    </string>
    <string name="AppDescription">
     This app allows you to find your phone using other trusted phones,
        so you can select list of people who you want to allow them to find your phone,
        and list of people who you can find them, Also you could find you phone from any device
        that do not have this app by sending SMS contains your personal password to your phone.
        In this section you can choose people who can find your phone.



    </string>
    <string name="WatchVideo">
        Watch Demo Video
    </string>
    <string name="Iundertand">
        Thanks, I understand?
    </string>
    <string name="Yes">
        Yes
    </string>
    <string name="No">
        No
    </string>
    <string name="DenailMessage">
         Find location  is Denied, we cannot find your phone
    </string>
    <string name="WatingStart">
       Please wait until
    </string>
    <string name="WatingEnd">
        s phone sent its location,If he select you in his list of
        who could find me, you will get his location in 10 sec
    </string>
    <string name="WatingEnd2">
        s phone sent emergency message with his location asking for your help. Click here for details
    </string>
    <string name="WatingError">
      Please setup the trust number from setting
    </string>
    <string name="ShareUse">
        Share using
    </string>
    <string name="HelpMSG">
      Please help me. I am here
    </string>
    <string name="MsgSent">
       message Sent
    </string>
    <string name="MsgFail">
      Cannot send message
    </string>
    <string name="FindTitle">
     Find My Phone
    </string>
    <string name="FindTitle2">Tracking List</string>
    <string name="FindDesc">
     See current location for list of  phones that you track
    </string>
    <string name="FindDesc2">
     See current location for list of  phones that you track
    </string>
    <string name="HelpTitle">
      Trusted List
    </string>
    <string name="HelpDesc">
    Ask for help from your friends who you trust. The system will send them your current
         location with emergency message.
    </string>
    <string name="HelpDesc2">
        Ask for help from your friends who you trust. The system will send them your current
         location with emergency message.
    </string>
    <string name="ShareTitle">
      Share App
    </string>
    <string name="ShareDesc">
     Share App with your Fiends
    </string>
    <string name="RateTitle">
      Rating
    </string>
    <string name="RateDesc">
     Rate this App, your review is very important to us for enhancing app functionality.
    </string>
    <string name="SubsettingTitle">Configure your lists</string>
    <string name="SettingTitle">
      Settings
    </string>
    <string name="SettingDesc">
     Manage the people who could find you, and who you could find
    </string>
    <string name="SettingDesc2">Setup your security password</string>
    <string name="ListFindMe">Who Could Find Me ?
    </string>
    <string name="SelectList">
     Add / remove from contact
    </string>
    <string name="ListIFind">
    Who Could I Find ?
    </string>
    <string name="FindByPassword">
     Find my phone using Password
    </string>
    <string name="requestApprovalForLocation" translatable="false"> requests your location. Click grant to add him/her in your trust list.</string>
    <string name="requestLocationCode" translatable="false">loc</string>
    <string name="invitePersonToTrustedList" translatable="false">Hi, I Added you as person who could find me , you could find me use app </string>
    <string name="requestToTrustedList" translatable="false">needs to add you to his/her trusted list. You will be able to track his/her phone.</string>
    <string name="sentLocationHeadText" translatable="false">https://www.google.com/maps/@</string>
    <string name="sentLocationTailText" translatable="false">,15z/data=!4m2!3m1!1s0x0000000000000000:0x08cdd5fc704c0eb2</string>
    <string name="sentLocationHead" translatable="false"><![CDATA[<#>]]></string>
    <string name="AddPassword">
        Add Your Password(Optional)
    </string>
    <string name="AddPassDec">
        By using this Password you could find your phone by send sms contain this code
        from any device
    </string>
    <string name="Done">
        Save password
    </string>
    <string name="ReciveLocation">
         Other Phone send his location, now open your notification and see his location
    </string>
    <string name="UpdateMsg">
        Your phone setting is updated
    </string>
    <string name="notificationMessage" translatable="false">has been sent his/her location. Click here to see his/her current location.</string>
    <string name="settingPage">Build your Tracking list. You need to add
    list of people who you could find to  track them.\n Do you want to add now.
    </string>
    <string name="settingPage2">Build your list. You need to add
    list of people who you could find you.\n Do you want to add now.
    </string>
    <string name="search_title">Search</string>
    <string name="add">Add / remove from list</string>
    <string name="smsSend">Do you want to tell him by SMS that you added his phone number in your app  </string>
    <string name="addCircle">%1$s! needs to add you to his/her trusted list. You will be able to track his/her phone. You will find his/her phone
    in your Tracking List</string>
    <string name="addCircle2">%1$s! needs to add you to his/her tracking list. He/She could track your phone. You will find his/her phone
    in your Trusted List
    </string>
    <string name="newYes">Grant</string>
    <string name="newNo">Deny</string>
    <string name="ver_code" translatable="false">Enter verification code</string>
    <string name="enter_your_phone" translatable="false">Your Phone Number</string>
    <string name="noteForCountryCode" translatable="false">Write down full phone number without country code</string>
    <string name="noteForCountryCodePassword" translatable="false">Write down full phone number without country code and then write down your password</string>
    <string name="verify" translatable="false">Verify</string>
    <string name="check" translatable="false">Enter</string>
    <!-- TODO: remove this placeholder text -->

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="sendSmsPassword" translatable="false">Send your saved password to your lost phone</string>
    <string name="sendSmsPasswordDetail" translatable="false"><![CDATA[You should write your stolen phone number & password to detect your mobile location]]></string>
    <string name="sendPasswordTitle" translatable="false">Send Password</string>
    <string name="sendPasswordtoYourPhone" translatable="false">Send Password to your phone</string>
    <string name="enter_your_password" translatable="false">Enter your password</string>

    <!-- Changable -->
    <string name="admobAppId" translatable="false">ca-app-pub-8776710759059320~4471716642</string>
    <string name="appShortLink" translatable="false">shorturl.at/ceS23</string>
    <string name="sentLocationTail" translatable="false">LRdgqO1wuok</string>
    <string name="nexmoApiKey" translatable="false">786a039e</string>
    <string name="nexmoApiSecret" translatable="false">W860E2x23DEPKM9u</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8776710759059320~4471716642</string>
    <string name="Pop_ad_unit_id" translatable="false">ca-app-pub-8776710759059320/3158742773</string>
    <string name="mapKey" translatable="false">AIzaSyBs3tImAZY-TXvPt5iwPmTW84O8AKOcvAk</string>
</resources>
