<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

>
        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noteForCountryCodePassword"
            android:textColor="@android:color/holo_red_dark"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">



        <EditText
            android:id="@+id/phone_et"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:drawableRight="@drawable/phone"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            tools:ignore="Autofill" />
    </LinearLayout>
        <EditText
            android:id="@+id/password"
            android:hint="@string/enter_your_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/verify_btn"
            android:text="@string/sendPasswordtoYourPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF6F61"
            />



        <TextView
            android:id="@+id/count_down"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>

