<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#C0C0C0"
    >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="#ffffff"
    tools:context=".view.VerificationActivity">

    <TextView
        android:id="@+id/noteAbove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noteForCountryCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phone_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/country_code"
        android:textColor="@android:color/holo_red_dark"
        />
    <Spinner
        android:id="@+id/country_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/phone_et"
        android:hint="@string/enter_your_phone"
        app:layout_constraintLeft_toRightOf="@id/country_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@color/black"
        android:drawableRight="@drawable/phone"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/verify_btn"
        android:text="@string/verify"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF6F61"
        />

    <Button
        android:id="@+id/code_btn"
        android:visibility="gone"
        android:text="@string/check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/count_down"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
